@startuml
skinparam shadowing false
entity users {
  * id : BIGINT <<PK>>
  --
  full_name
  * email <<UQ>>
  phone
  password_hash
  role
  two_factor_enabled
  created_at
}
entity doctors {
  * id : BIGINT <<PK>>
  --
  full_name
  specialty
  city
  hospital_name
  visit_price
  rating / review_count
  available_days
  start_hour / end_hour
  user_id <<FK,UQ>>
}
entity appointments {
  * id : BIGINT <<PK>>
  --
  patient_id <<FK>>
  doctor_id <<FK>>
  date
  time
  status
  notes
  created_at
  <<UQ (doctor_id, date, time)>>
}
entity reviews {
  * id : BIGINT <<PK>>
  --
  patient_id <<FK>>
  doctor_id <<FK>>
  rating
  comment
  <<UQ (patient_id, doctor_id)>>
}
entity notifications {
  * id : BIGINT <<PK>>
  --
  user_id <<FK>>
  title
  message
  type
  is_read
  created_at
}
users ||--o| doctors
doctors ||--o{ appointments
users ||--o{ appointments
doctors ||--o{ reviews
users ||--o{ reviews
users ||--o{ notifications
@enduml
